fix(aura): fix composite substep hierarchy, lightbox modal, and timestamped reports
- Wrap composite steps in execution lifecycle handlers to dispatch StepStartedEvent and StepFinishedEvent during replay\n- Reconstruct missing parent steps in PreliminaryReportListener rather than leaking substeps to previous steps\n- Append execution timestamps to report filenames to preserve test history and avoid overwriting\n- Implement Lightbox overlay for screenshot viewing in HTML report\n- Handle 0-action conditional steps in REPLAY_STRICT mode\n- Correct Neodymium import in AuraReportingService